docs: publish traffic-manager-health-probe, java-jvm-heap-oom (python), keda-scaler-misconfiguration, health-check-grpc-probe